--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
-    "mongoose-auto-increment": "^5.0.1"
+    "mongoose": "^6.4.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
