--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1183.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
